--- a/css/header.css
+++ b/css/header.css
@@ -53,34 +53,81 @@
     z-index: 1000;
 }
 /* Phone Media */
-@media (min-width:375px){
+@media (min-width:340px){
     img {width: 70px; height: 50px;}
-    .word {font-size: 40px; margin: 0 40px; letter-spacing: 5px;}
+    .word {font-size: 30px; margin: 0 30px; letter-spacing: 3px;}
     .divider {width: 500px; height: 3px; background: #f9eb35; margin: 0 20px; display: inline-block;} 
     ul.nav {padding: 0px;}
-    /* .container-fluid {flex-direction: column;} */
+    li:nth-child(1) {padding: 0px 120px 0px 0px;}
 }
-@media (min-width:700px){
+@media (min-width:500px){
     img {width: 70px; height: 50px;}
-    .word {font-size: 40px; margin: 0 200px; letter-spacing: 5px;}
+    .word {font-size: 50px; margin: 0px 20px 0px 60px; letter-spacing: 3px;}
+    .divider {width: 500px; height: 3px; background: #f9eb35; margin: 0 20px; display: inline-block;} 
+    ul.nav {padding: 0px 120px 0px 10px;}
+    li:nth-child(1) {padding: 0px 120px 0px 0px;}
+}
+/* Ipad Media */
+@media (min-width:700px){
+    img {width: 120px; height: 80px;}
+    .word {font-size: 60px; margin: 0 100px; letter-spacing: 3px;}
+    .divider {width: 900px; height: 3px; background: #f9eb35; margin: 0 20px; display: inline-block;} 
+    .nav a {padding:0px 10px;}
+    li:nth-child(1) {padding: 0px 0px 0px 80px;}
+}
+@media (min-width:800px){
+    img {width: 120px; height: 80px;}
+    .word {font-size: 60px; margin: 0 130px; letter-spacing: 3px;}
     .divider {width: 800px; height: 3px; background: #f9eb35; margin: 0 20px; display: inline-block;} 
-    .nav a {padding:0px 20px;}
-    .nav-item{font-size: 25px;}
-    /* .container-fluid {flex-direction: column;} */
+    .nav a {padding:0px 10px;}
+    li:nth-child(1) {padding: 0px 0px 0px 90px;}
 }
 @media (min-width:900px){
-    img {width: 130px; height: 90px;}
-    .word {font-size: 50px; margin: 0 40px; letter-spacing: 5px;}
-    .divider {width: 800px; height: 3px; background: #f9eb35; margin: 0 20px; display: inline-block;} 
-    .nav-item{font-size: 25px;}
-    .container-fluid {flex-direction: column;}
+    img {width: 120px; height: 80px;}
+    .word {font-size: 70px; margin: 0 150px; letter-spacing: 3px;}
+    .divider {width: 900px; height: 3px; background: #f9eb35; margin: 0 20px; display: inline-block;} 
+    .nav a {padding:0px 20px;}
+    li:nth-child(1) {padding: 0px 0px 0px 140px;}
 }
 /* Computer Media */
-@media (min-width:1900px){
-    .divider {width: 300px; height: 3px; background: #f9eb35; margin: 0 20px; display: inline-block;}
-    .nav a {padding-right: 40px;}
+@media (min-width:1000px){
+    img {width: 80px; height: 60px;}
+    .word {font-size: 40px; margin: 0 10px 0px 40px; letter-spacing: 5px;}
+    .divider {width: 100px; height: 3px; background: #f9eb35; margin: 0 5px; display: inline-block;} 
+    .nav-item{font-size: 20px;}
+    li:nth-child(1) {padding: 0px;}
+    a.nav-link {padding: 5px;}
+    ul.nav {padding: 0px;}
 }
+@media (min-width:1100px){
+    img {width: 80px; height: 60px;}
+    .word {font-size: 40px; margin: 0 10px 0px 40px; letter-spacing: 5px;}
+    .divider {width: 125px; height: 3px; background: #f9eb35; margin: 0 5px; display: inline-block;} 
+    .nav-item{font-size: 20px;}
+    li:nth-child(1) {padding: 0px;}
+    a.nav-link {padding: 10px;}
+    ul.nav {padding: 0px;}
+}
+@media (min-width:1200px){
+    img {width: 80px; height: 60px;}
+    .word {font-size: 40px; margin: 0 10px 0px 40px; letter-spacing: 5px;}
+    .divider {width: 150px; height: 3px; background: #f9eb35; margin: 0 5px; display: inline-block;} 
+    .nav-item{font-size: 25px;}
+    li:nth-child(1) {padding: 0px;}
+    a.nav-link {padding: 5px;}
+    ul.nav {padding: 0px;}
+}
+@media (min-width:1500px){
+    .divider {width: 225px; height: 3px; background: #f9eb35; margin: 0 5px; display: inline-block;} 
+}
+@media (min-width:1900px){
+    .divider {width: 350px; height: 3px; background: #f9eb35; margin: 0 20px; display: inline-block;}
+    .nav a {padding-right: 40px;}
+    li:nth-child(1) {padding: 0px;}
+}
+/* Ultra wide Media  */
 @media (min-width:2500px){
     .divider {width: 600px; height: 3px; background: #f9eb35; margin: 0 20px; display: inline-block;}
     .nav a {padding-right: 60px;}
+    li:nth-child(1) {padding: 0px;}
 }
